--- a/style.css
+++ b/style.css
@@ -225,6 +225,13 @@ html, body {
   font-size: 14px;
   transition: 0.15s ease;
 }
+.cm-item .delete {
+  color: red;
+  padding: 10px 14px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: 0.15s ease;
+}
 
 .cm-item:hover {
   background: #f5f5f5;
